unpackaged/main/default/objects/Account/fields/loan__Total_Principal_Remaining__c.field-meta.xml
<CustomField>
    <fullName>loan__Total_Principal_Remaining__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>Total principal remaining in all the investment order of the investor.</description>
    <inlineHelpText>Total principal remaining in all the investment order of the investor.</inlineHelpText>
    <label>Total Invested Principal Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>