unpackaged/main/default/objects/Account/fields/loan__Total_Returns__c.field-meta.xml
<CustomField>
    <fullName>loan__Total_Returns__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Return on Investment gained by Investor</description>
    <label>Total Returns</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>