unpackaged/main/default/objects/Account/fields/loan__Undeployed_Funds__c.field-meta.xml
<CustomField>
    <fullName>loan__Undeployed_Funds__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total amount which is available to invest in loans.</description>
    <inlineHelpText>tracks the investor payout or investor funds while creating investor loan or while selling the loan</inlineHelpText>
    <label>Available Funds</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>