unpackaged/main/default/objects/Account/fields/Member_ID__c.field-meta.xml
<CustomField>
    <fullName>Member_ID__c</fullName>
    <externalId>true</externalId>
    <label>Member ID</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>