unpackaged/main/default/objects/Account/fields/Monthly_Allocation_Cap__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Allocation_Cap__c</fullName>
    <description>Maximum number of applications that can allocated to investor in a month. Field is manually set.</description>
    <inlineHelpText>Maximum number of applications that can allocated to investor in a month. Field is manually set.</inlineHelpText>
    <label>Monthly Allocation Cap</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>