unpackaged/main/default/objects/Account/fields/Monthly_Housing_Payment__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Housing_Payment__c</fullName>
    <label>Monthly Housing Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>