unpackaged/main/default/objects/Account/fields/NeoVerify_Data__c.field-meta.xml
<CustomField>
    <fullName>NeoVerify_Data__c</fullName>
    <label>NeoVerify Data</label>
    <type>Date</type>
</CustomField>