unpackaged/main/default/objects/Account/fields/Net_Difference__c.field-meta.xml
<CustomField>
    <fullName>Net_Difference__c</fullName>
    <label>Net Difference</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>