unpackaged/main/default/objects/Account/fields/Net_Income_Variance__c.field-meta.xml
<CustomField>
    <fullName>Net_Income_Variance__c</fullName>
    <label>Net Income Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>