unpackaged/main/default/objects/Account/fields/no_of_shares_to_be_Sold__c.field-meta.xml
<CustomField>
    <fullName>no_of_shares_to_be_Sold__c</fullName>
    <inlineHelpText>Provided value is % of Shares that will be Sold to the Funding partner automatically.</inlineHelpText>
    <label>% of shares to be Sold.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>