unpackaged/main/default/objects/Account/fields/Number_Of_Applications_Invested__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Applications_Invested__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total number of applications allocated to investor LTD. Field is adjusted in allocations routine.</description>
    <inlineHelpText>Total number of applications allocated to investor LTD. Field is adjusted in allocations routine.</inlineHelpText>
    <label>Number Of Applications Invested</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>