unpackaged/main/default/objects/Account/fields/Payoff_UID__c.field-meta.xml
<CustomField>
    <fullName>Payoff_UID__c</fullName>
    <label>Payoff UID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>