unpackaged/main/default/objects/Account/fields/Payoff_User_Slug__c.field-meta.xml
<CustomField>
    <fullName>Payoff_User_Slug__c</fullName>
    <label>Payoff User Slug</label>
    <length>255</length>
    <type>Text</type>
</CustomField>