unpackaged/main/default/objects/Account/fields/peer__Auto_Invest__c.field-meta.xml
<CustomField>
    <fullName>peer__Auto_Invest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Invest</label>
    <type>Checkbox</type>
</CustomField>