unpackaged/main/default/objects/Account/fields/peer__Borrower_Exposure_Percentage__c.field-meta.xml
<CustomField>
    <fullName>peer__Borrower_Exposure_Percentage__c</fullName>
    <label>Borrower Exposure Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>