unpackaged/main/default/objects/Account/fields/peer__Borrower_Information__c.field-meta.xml
<CustomField>
    <fullName>peer__Borrower_Information__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Borrower Information</label>
    <referenceTo>peer__Borrower_Information__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>