unpackaged/main/default/objects/Account/fields/peer__Credit_Rating_Matrix__c.field-meta.xml
<CustomField>
    <fullName>peer__Credit_Rating_Matrix__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Credit Rating Matrix</label>
    <referenceTo>peer__Credit_Rating_Matrix__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>