unpackaged/main/default/objects/Account/fields/peer__Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>peer__Date_of_Birth__c</fullName>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>