unpackaged/main/default/objects/Account/fields/peer__Email__c.field-meta.xml
<CustomField>
    <fullName>peer__Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>