unpackaged/main/default/objects/Account/fields/peer__External_Id__c.field-meta.xml
<CustomField>
    <fullName>peer__External_Id__c</fullName>
    <label>External Id</label>
    <length>32</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>