unpackaged/main/default/objects/Account/fields/peer__First_Name__c.field-meta.xml
<CustomField>
    <fullName>peer__First_Name__c</fullName>
    <label>First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>