unpackaged/main/default/objects/Account/fields/peer__Funds_Not_In_Queue__c.field-meta.xml
<CustomField>
    <fullName>peer__Funds_Not_In_Queue__c</fullName>
    <formula>(loan__Undeployed_Funds__c - peer__Amount_In_Funding__c)- peer__Funds_In_Queue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Funds Not In Queue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>