unpackaged/main/default/objects/Account/fields/peer__IsActiveInvestor__c.field-meta.xml
<CustomField>
    <fullName>peer__IsActiveInvestor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsActiveInvestor</label>
    <type>Checkbox</type>
</CustomField>