unpackaged/main/default/objects/Account/fields/peer__Portfolio_Amount__c.field-meta.xml
<CustomField>
    <fullName>peer__Portfolio_Amount__c</fullName>
    <formula>loan__Undeployed_Funds__c + peer__Total_remaining_Investment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Portfolio Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>