unpackaged/main/default/objects/Account/fields/peer__Portfolio_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>peer__Portfolio_Timestamp__c</fullName>
    <description>Timestamp of last generated portfolio</description>
    <label>Portfolio Timestamp</label>
    <type>DateTime</type>
</CustomField>