unpackaged/main/default/objects/Account/fields/peer__Sign_Agreement__c.field-meta.xml
<CustomField>
    <fullName>peer__Sign_Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>indicaztes if the video is already signed</description>
    <label>Sign Agreement</label>
    <type>Checkbox</type>
</CustomField>