unpackaged/main/default/objects/Account/fields/peer__Total_remaining_Investment__c.field-meta.xml
<CustomField>
    <fullName>peer__Total_remaining_Investment__c</fullName>
    <label>Total remaining Investment</label>
    <summarizedField>peer__Credit_Band_Allocation__c.peer__Total_Investment_Order_Amount__c</summarizedField>
    <summaryForeignKey>peer__Credit_Band_Allocation__c.peer__Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>