unpackaged/main/default/objects/Account/fields/Person_UID__c.field-meta.xml
<CustomField>
    <fullName>Person_UID__c</fullName>
    <label>Person UID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>