unpackaged/main/default/objects/Account/fields/Previous_Month_Total_Allocations__c.field-meta.xml
<CustomField>
    <fullName>Previous_Month_Total_Allocations__c</fullName>
    <description>Total number of applications allocated to investor in prior month. Field is updated by system job monthly.</description>
    <inlineHelpText>Total number of applications allocated to investor in prior month. Field is updated by system job monthly.</inlineHelpText>
    <label>Previous Month Total Allocations</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>