unpackaged/main/default/objects/Account/fields/Previous_Month_Total_Funded__c.field-meta.xml
<CustomField>
    <fullName>Previous_Month_Total_Funded__c</fullName>
    <description>Total loan amount allocated to investor in prior month. Field is updated by systemic job monthly.</description>
    <inlineHelpText>Total loan amount allocated to investor in prior month. Field is updated by systemic job monthly.</inlineHelpText>
    <label>Previous Month Total Funded</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>