unpackaged/main/default/objects/Account/fields/Previous_year_Total_Funded__c.field-meta.xml
<CustomField>
    <fullName>Previous_year_Total_Funded__c</fullName>
    <description>Total loan amount of applications allocated to investor in prior year. Field is updated by system job yearly.</description>
    <inlineHelpText>Total loan amount of applications allocated to investor in prior year. Field is updated by system job yearly.</inlineHelpText>
    <label>Previous year Total Funded</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>