unpackaged/main/default/objects/Account/fields/Primary_Sourcce_of_income__c.field-meta.xml
<CustomField>
    <fullName>Primary_Sourcce_of_income__c</fullName>
    <label>Primary Sourcce of income</label>
    <length>255</length>
    <type>Text</type>
</CustomField>