unpackaged/main/default/objects/Account/fields/Remaining_Amount__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Amount__c</fullName>
    <description>Formula that finds Loan Amount difference between Total Investment Limit and Amount Invested.</description>
    <formula>Total_Investment_Limit__c -  Amount_Invested__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula that finds Loan Amount difference between Total Investment Limit and Amount Invested.</inlineHelpText>
    <label>Remaining Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>