unpackaged/main/default/objects/Account/fields/Remaining_Applications__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Applications__c</fullName>
    <description>Formula the finds difference between Total No of Application Limit and Number of Applications Invested.</description>
    <formula>Total_No_of_Application_Limit__c -  Number_Of_Applications_Invested__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula the finds difference between Total No of Application Limit and Number of Applications Invested.</inlineHelpText>
    <label>Remaining Applications</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>