unpackaged/main/default/objects/Account/fields/social_security_number_uniqueness_field__c.field-meta.xml
<CustomField>
    <fullName>social_security_number_uniqueness_field__c</fullName>
    <label>Social Security Number</label>
    <length>128</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>