unpackaged/main/default/objects/Account/fields/Suffix__c.field-meta.xml
<CustomField>
    <fullName>Suffix__c</fullName>
    <description>To describe Mr. , Mrs, Miss etc. Based on the picklist from there end.</description>
    <label>Suffix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>