unpackaged/main/default/objects/Account/fields/TALX_Date_Modified__c.field-meta.xml
<CustomField>
    <fullName>TALX_Date_Modified__c</fullName>
    <label>TALX Date Modified</label>
    <type>Date</type>
</CustomField>