unpackaged/main/default/objects/Account/fields/TALX_Employer__c.field-meta.xml
<CustomField>
    <fullName>TALX_Employer__c</fullName>
    <label>TALX Employer</label>
    <length>200</length>
    <type>Text</type>
</CustomField>