unpackaged/main/default/objects/Account/fields/TALX_Hire_Date__c.field-meta.xml
<CustomField>
    <fullName>TALX_Hire_Date__c</fullName>
    <label>TALX Hire Date</label>
    <type>Date</type>
</CustomField>