unpackaged/main/default/objects/Account/fields/TALX_Length_of_Employment__c.field-meta.xml
<CustomField>
    <fullName>TALX_Length_of_Employment__c</fullName>
    <label>TALX Length of Employment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>