unpackaged/main/default/objects/Account/fields/TALX_Performed_by__c.field-meta.xml
<CustomField>
    <fullName>TALX_Performed_by__c</fullName>
    <label>TALX Performed by</label>
    <length>255</length>
    <type>Text</type>
</CustomField>