unpackaged/main/default/objects/Account/fields/TALX_Position__c.field-meta.xml
<CustomField>
    <fullName>TALX_Position__c</fullName>
    <label>TALX Position</label>
    <length>200</length>
    <type>Text</type>
</CustomField>