unpackaged/main/default/objects/Account/fields/TALX_Salary__c.field-meta.xml
<CustomField>
    <fullName>TALX_Salary__c</fullName>
    <label>TALX Salary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>