unpackaged/main/default/objects/Account/fields/TALX_Term_Date__c.field-meta.xml
<CustomField>
    <fullName>TALX_Term_Date__c</fullName>
    <label>TALX Term Date</label>
    <type>Date</type>
</CustomField>