unpackaged/main/default/objects/Account/fields/Tenure__c.field-meta.xml
<CustomField>
    <fullName>Tenure__c</fullName>
    <label>Tenure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>