unpackaged/main/default/objects/Account/fields/Total_Allocations_MTD__c.field-meta.xml
<CustomField>
    <fullName>Total_Allocations_MTD__c</fullName>
    <description>Total number of applications allocated to investor MTD. Field is adjusted during allocation process.</description>
    <inlineHelpText>Total number of applications allocated to investor MTD. Field is adjusted during allocation process.</inlineHelpText>
    <label>Total Allocations MTD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>