unpackaged/main/default/objects/Account/fields/Total_Calculated_Income__c.field-meta.xml
<CustomField>
    <fullName>Total_Calculated_Income__c</fullName>
    <label>Total Calculated Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>