unpackaged/main/default/objects/Account/fields/Total_Funded_Till_date__c.field-meta.xml
<CustomField>
    <fullName>Total_Funded_Till_date__c</fullName>
    <description>sum of the loan amount funded by the investor until today</description>
    <inlineHelpText>sum of the loan amount funded by the investor until today</inlineHelpText>
    <label>Total Funded Till Date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>