unpackaged/main/default/objects/Account/fields/Total_Funded_YTD__c.field-meta.xml
<CustomField>
    <fullName>Total_Funded_YTD__c</fullName>
    <description>Total loan amount allocated to investor YTD. Field is adjusted during allocation process.</description>
    <inlineHelpText>Total loan amount allocated to investor YTD. Field is adjusted during allocation process.</inlineHelpText>
    <label>Total Funded YTD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>