unpackaged/main/default/objects/Account/fields/Total_Investment_Limit__c.field-meta.xml
<CustomField>
    <fullName>Total_Investment_Limit__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total loan amount that can be allocated to investor. Field is manually set.</description>
    <inlineHelpText>Total loan amount that can be allocated to investor. Field is manually set.</inlineHelpText>
    <label>Total Investment Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>