unpackaged/main/default/objects/Account/fields/Total_No_of_Application_Limit__c.field-meta.xml
<CustomField>
    <fullName>Total_No_of_Application_Limit__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Max number of applications that can be allocated to an investor. Field is manually set.</description>
    <inlineHelpText>Max number of applications that can be allocated to an investor. Field is manually set.</inlineHelpText>
    <label>Total No of Application Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>