unpackaged/main/default/objects/Account/fields/US_Citizen__c.field-meta.xml
<CustomField>
    <fullName>US_Citizen__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Field to define the member is U.S. Citizen or U.S. Person (including a U.S. Resident Alien) or not.</description>
    <inlineHelpText>Should be passed from FrontEnd to set the Member as U.S. Citizen or U.S. Person (including a U.S. Resident Alien)</inlineHelpText>
    <label>U.S. Citizen or U.S. Person</label>
    <type>Checkbox</type>
</CustomField>