unpackaged/main/default/objects/Account/fields/User_Friendly_ID__c.field-meta.xml
<CustomField>
    <fullName>User_Friendly_ID__c</fullName>
    <label>User Friendly ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>