unpackaged/main/default/objects/Account/fields/Work_email_verified_check_box__c.field-meta.xml
<CustomField>
    <fullName>Work_email_verified_check_box__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Work email verified check box</label>
    <type>Checkbox</type>
</CustomField>