unpackaged/main/default/objects/Account/fields/Work_Phone__c.field-meta.xml
<CustomField>
    <fullName>Work_Phone__c</fullName>
    <label>Work Phone</label>
    <type>Phone</type>
</CustomField>