unpackaged/main/default/objects/Account/fields/Work_Phone_Extension__c.field-meta.xml
<CustomField>
    <fullName>Work_Phone_Extension__c</fullName>
    <label>Work Phone Extension</label>
    <length>20</length>
    <type>Text</type>
</CustomField>