unpackaged/main/default/objects/Account/fields/Yodlee_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Yodlee_Account_Id__c</fullName>
    <externalId>true</externalId>
    <label>Yodlee Account Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>