unpackaged/main/default/objects/Account/fields/ZIP_Code__c.field-meta.xml
<CustomField>
    <fullName>ZIP_Code__c</fullName>
    <label>ZIP Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>