unpackaged/main/default/objects/Account/validationRules/loan__Collect_Service_Fees_On_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>loan__Collect_Service_Fees_On_Check</fullName>
    <active>true</active>
    <description>We cannot select No Fees along with other values.</description>
    <errorConditionFormula>AND(INCLUDES(loan__Collect_Service_Fees_on__c, 'No Fees'), OR(INCLUDES(loan__Collect_Service_Fees_on__c, 'Principal'), INCLUDES(loan__Collect_Service_Fees_on__c, 'Interest'), INCLUDES(loan__Collect_Service_Fees_on__c, 'Fees')))</errorConditionFormula>
    <errorMessage>In "Collect Service Fees On", "No Fees" cannot be selected with other values.</errorMessage>
</ValidationRule>